# Playground.Cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CustomIterator/Vector/UT/: CMakeLists.txt  Vector.UT.cpp
P002.VisitorDesignPatternGeneric/lib/: CMakeLists.txt
P002.VisitorDesignPatternGeneric/lib/Animal/: CMakeLists.txt
P002.VisitorDesignPatternGeneric/lib/Animal/Cat/: Cat.cpp  Cat.hpp
P002.VisitorDesignPatternGeneric/lib/Animal/Dog/: Dog.cpp  Dog.hpp
P002.VisitorDesignPatternGeneric/lib/Animal/Parrot/: CMakeLists.txt  Parrot.cpp  Parrot.hpp
P002.VisitorDesignPatternGeneric/lib/Animal/include/Animal/Animals/Parrot/: Parrot.hpp
P002.VisitorDesignPatternGeneric/lib/Animal/include/Animal/Helper/Visitor/: AnimalVisitor.hpp
P002.VisitorDesignPatternGeneric/lib/Animal/sources/: CMakeLists.txt
P002.VisitorDesignPatternGeneric/lib/Animal/sources/Animal/: CMakeLists.txt
P002.VisitorDesignPatternGeneric/lib/Animal/sources/Animal/Animals/Cat/: CMakeLists.txt  Cat.cpp
P002.VisitorDesignPatternGeneric/lib/Animal/sources/Animal/Animals/Dog/: CMakeLists.txt  Dog.cpp
P002.VisitorDesignPatternGeneric/lib/Animal/sources/Animal/Animals/Parrot/: CMakeLists.txt
P002.VisitorDesignPatternGeneric/lib/Serialize/: Serializable.hpp  Serializer.hpp
P002.VisitorDesignPatternGeneric/lib/Serialize/JSON/: JsonSerializer.cpp  JsonSerializer.hpp
P002.VisitorDesignPatternGeneric/lib/Serialize/XML/: XmlSerializer.cpp  XmlSerializer.hpp
Performance/: CMakeLists.txt
Performance/src/: CMakeLists.txt
Performance/src/01_substring_sort/: CMakeLists.txt  main.cpp
algorithms/data_structure/lock_free/stack/: CMakeLists.txt
algorithms/data_structure/lock_free/stack/benchmark/: CMakeLists.txt  stack_lock_guard.benchmark.cpp
algorithms/data_structure/lock_free/stack/lib/: CMakeLists.txt
algorithms/data_structure/lock_free/stack/lib/include/: lf_stack.hpp  stack_mutex.hpp  stack_optimize_mutex.hpp
algorithms/data_structure/lock_free/stack/lib/include/mutex/: mutex_v1.hpp
algorithms/data_structure/lock_free/stack/lib/src/: CMakeLists.txt
algorithms/data_structure/lock_free/stack/lib/src/mutex/: CMakeLists.txt  mutex_v1.cpp  mutex_v2.cpp
algorithms/data_structure/lock_free/stack/test/: CMakeLists.txt  lf_stack.test.cpp
algorithms/data_structure/queue/test/: CMakeLists.txt
algorithms/graph/network_flow/maximum_flow-Ford_Fulkerson_DFS/: CMakeLists.txt  main.test.cpp  maximum_flow.cpp  maximum_flow.hpp
queue/benchmark/: CMakeLists.txt  spsc_queue.benchmark.cpp
queue/test/: CMakeLists.txt  spsc_queue.test.cpp
src/: CMakeLists.txt
src/Book/: CMakeLists.txt
src/Book/The-Art-of-Writing-Efficient-Programs/01_substring_sort/: compare.cpp  main.cpp
src/CustomIterator/: CMakeLists.txt
src/CustomIterator/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
src/CustomIterator/Vector/UT/: Vector.Iterator.UT.cpp  Vector.UT.cpp
src/LeetCode/: CMakeLists.txt
src/LeetCode/2090_k_radius_subarray_averages/: main.cpp
src/P001.VisitorDesignPattern/: main.cpp
src/P001.VisitorDesignPattern/lib/: CMakeLists.txt
src/P001.VisitorDesignPattern/lib/Animal/Cat/: CMakeLists.txt  Cat.cpp  Cat.hpp
src/P001.VisitorDesignPattern/lib/Animal/Dog/: Dog.cpp  Dog.hpp
src/P001.VisitorDesignPattern/lib/Animal/Parrot/: Parrot.cpp  Parrot.hpp
src/P001.VisitorDesignPattern/lib/Serialize/: Serializable.hpp  Serializer.hpp
src/P001.VisitorDesignPattern/lib/Serialize/JSON/: JsonSerializer.cpp  JsonSerializer.hpp
src/P001.VisitorDesignPattern/lib/Serialize/XML/: XmlSerializer.cpp  XmlSerializer.hpp
src/P002.VisitorDesignPatternGeneric/: CMakeLists.txt  main.cpp
src/P002.VisitorDesignPatternGeneric/lib/Animal/include/Animal/Animals/Cat/: Cat.hpp
src/P002.VisitorDesignPatternGeneric/lib/Animal/include/Animal/Animals/Dog/: Dog.hpp
src/P002.VisitorDesignPatternGeneric/lib/Animal/include/Animal/Animals/Parrot/: Parrot.hpp
src/P002.VisitorDesignPatternGeneric/lib/Serialize/: CMakeLists.txt
src/P002.VisitorDesignPatternGeneric/lib/Serialize/JSON/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.hpp
src/P002.VisitorDesignPatternGeneric/lib/Serialize/Serializer/: CMakeLists.txt  Serializer.cpp  Serializer.hpp
src/P002.VisitorDesignPatternGeneric/lib/Serialize/XML/: XmlSerializer.cpp  XmlSerializer.hpp
src/P003.Spectre/: main.cpp
src/algorithms/data_structure/disjoint_set/lib/: disjoint_set.cpp  disjoint_set.hpp
src/algorithms/data_structure/disjoint_set/test/: main.test.cpp
src/algorithms/data_structure/lock_free/stack/: CMakeLists.txt
src/algorithms/data_structure/lock_free/stack/benchmark/: stack_lock_guard.benchmark.cpp
src/algorithms/data_structure/lock_free/stack/lib/include/: mt_stack.hpp  stack_lock_guard.hpp  stack_mutex.hpp
src/algorithms/data_structure/lock_free/stack/lib/src/: lf_stack.cpp
src/algorithms/graph/: CMakeLists.txt
src/algorithms/graph/network_flow/lib/include/: edge.hpp  edge_throughput.hpp  edmonds_karp_solver.hpp  ford_fulkerson_dfs_solver.hpp  types.hpp
src/algorithms/graph/network_flow/lib/include/helper/: named_type.hpp  utility.hpp
src/algorithms/graph/network_flow/lib/src/: CMakeLists.txt  edge.cpp  edge_throughput.cpp  edmonds_karp_solver.cpp  ford_fulkerson_dfs_solver.cpp
src/algorithms/graph/network_flow/test/: main.test.cpp
src/performance/cpu_frequency_scaling/: measure_cpu_frequencies.py
src/performance/fibonacci/: CMakeLists.txt
src/performance/fibonacci/benchmark/: CMakeLists.txt  fibonacci.bench.cpp
src/performance/fibonacci/lib/: CMakeLists.txt
src/performance/fibonacci/lib/src/: fibonacci.cpp  fibonacci.test.cpp
src/queue/: CMakeLists.txt
src/queue/benchmark/: CMakeLists.txt  spsc_queue.benchmark.cpp
src/queue/lib/include/: spsc_queue.h
src/queue/lib/include/impl/: queue_mutex.hpp  queue_wip.hpp
src/queue/test/: spsc_queue.test.cpp
src/simd_01/: CMakeLists.txt  vwap_animation.html
src/simd_01/benchmark/: CMakeLists.txt  simd.benchmark.cpp
src/simd_01/lib/: CMakeLists.txt  simd.cpp  simd.h
src/simd_01/test/: CMakeLists.txt  simd.test.cpp
(+68 files in other folders)
