cmake_minimum_required(VERSION 3.31)
project(playground_cpp
    LANGUAGES CXX
)

########################################################################################################################
# Global Settings
########################################################################################################################
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

enable_testing()

########################################################################################################################
# CMake files
########################################################################################################################
include(cmake/compiler_warnings.cmake)

########################################################################################################################
# 3PP Packages
########################################################################################################################
find_package(fmt CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
find_package(benchmark CONFIG REQUIRED)

#########################################################################################################################
# Compiler options
#########################################################################################################################
# Version C++23
add_library(cpp_ver_23 INTERFACE)
target_compile_features(cpp_ver_23
    INTERFACE
    cxx_std_23
)

########################################################################################################################
# Playgrounds
########################################################################################################################
add_subdirectory(src)
